src/objects/ADvendio__EMail__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContentType__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>text/html</fullName>
                    <default>true</default>
                    <label>text/html</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ForeignAttachments__c</fullName>
        <description>Holds up to 10 attachments seperated by &quot;;&quot;</description>
        <label>Foreign Attachments</label>
        <length>190</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ForeignId__c</fullName>
        <label>Foreign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__From__c</fullName>
        <label>From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__Info__c</fullName>
        <label>Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecordId__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>E-Mail</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-Mail-{0}</displayFormat>
        <label>E-Mail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Mails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>